# scrapy-statsd

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  Pipfile  README.md  README.rst  docker-compose.yml  example-logger.py  pyproject.toml  requirements.txt  scrapy.cfg  setup.cfg  setup.py  tox.ini
scrapy_statsd_extension/: __init__.py  defaults.py  handlers.py  utils.py
scrapy_statsd_extension/handlers/: __init__.py  datadog.py  graphite.py  telegraf.py
src/scrapy_statsd/: __init__.py  defaults.py  handlers.py
src/scrapy_statsd_extension/: __init__.py  defaults.py  handlers.py  utils.py
tests/: scrapy.cfg  test_handlers.py  test_utils.py
tests/dummy_project/: items.py  middlewares.py  pipelines.py  settings.py
tests/dummy_project/spiders/: async_dummy_spider.py  dummy_spider.py
tests/test_scrapy_statsd_extension/: test_handlers.py  test_utils.py
