[metadata]
name = scrapy-statsd-extension
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/zack-wilson/scrapy-opensearch
project_url = https://github.com/zack-wilson/scrapy-opensearch.git
description = Scrapy extenstion to log stats to statsd
author = Scrapy developers
license = BSD
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython

[options]
packages = find:
install_requires =
    Twisted
    Scrapy
    statsd-telegraf
    scrapy
python_requires = >=3.10
package_dir =
    =src

[options.packages.find]
where = src
exclude =
    tests

[options.extras_require]
test =
    hypothesis
    mypy
    pre-commit
    pytest
    pytest-asyncio
    pytest-cov
    setup-cfg-fmt
    tox
